2002-10-04  Richard Williamson   <rjw@apple.com>

        Stubs for DOM level 2 core API.
        
        * DOM.subproj/WebDOMDocument.h: Added.
        * DOM.subproj/WebDOMDocument.m: Added.
        * DOM.subproj/WebDOMElement.h: Added.
        * DOM.subproj/WebDOMElement.m: Added.
        * DOM.subproj/WebDOMNamedNodeMap.h: Added.
        * DOM.subproj/WebDOMNamedNodeMap.m: Added.
        * DOM.subproj/WebDOMNode.h: Added.
        * DOM.subproj/WebDOMNode.m: Added.
        * WebKit.pbproj/project.pbxproj:
        
        * WebView.subproj/WebHTMLViewPrivate.m: tweak.

2002-10-04  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Add the last few exceptions.
	We now have a completely-clean run of extract-localizable-strings in WebKit!

2002-10-04  Darin Adler  <darin@apple.com>

	- fixed 3060140 -- REGRESSION: frames of animated gif drawn in wrong position.

	I got the "fromRect" and "toRect" parameters backwards when I made the changes
	to fix bug 3050810.

        * WebCoreSupport.subproj/WebImageRenderer.m: (-[WebImageRenderer nextFrame:]):
	Reverse targetRect and imageRect.

        * WebKit.pbproj/project.pbxproj: Mark some new files as UTF-8 because Project
	Builder asked me to.

2002-10-04  Darin Adler  <darin@apple.com>

        * Panels.subproj/WebPanelCookieAcceptHandler.h: Removed.
        * Panels.subproj/WebPanelCookieAcceptHandler.m: Removed.

2002-10-04  Richard Williamson   <rjw@apple.com>

        Danger Will Robinson.  We have to poseAsClass: as early as possible
        so that any NSViews will be created with the appropriate poser.
        This problem manifested itself with SimpleViewer failing
        immediately.  NSViews were created by loading a nib before
        WebHTMLView class initialization occured.  After posing the
        already instantiated instances of NSView had a %NSView class,
        causing many things to break.
        
        * WebView.subproj/WebHTMLViewPrivate.m: