@@ -1,0 +1,11 @@
+//
+//  WebKitLocalizableStrings.m
+//  WebKit
+//
+//  Created by Darin Adler on Fri Oct 04 2002.
+//  Copyright (c) 2002 Apple Computer, Inc. All rights reserved.
+//
+
+#import <WebFoundation/WebLocalizableStrings.h>
+
+WebLocalizableStringsBundle WebKitLocalizableStringsBundle = { "com.apple.WebKit", 0 };
